8247729: GetObjectMonitorUsage() might return inconsistent information

Reviewed-by: dholmes, dcubed, sspitsyn